--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,7 @@ body {
     scroll-snap-align: start;
 
 }
+
    .hero {
       color: #f8fafc;
       padding: 120px 0;
@@ -113,25 +114,26 @@ body {
   position: relative;
 }
 
-/* 9:16 Vertical Frame */
 .hero-image img {
-  width: 260px;
-  aspect-ratio: 9 / 16;
-  object-fit: cover;
+  width: clamp(260px, 45vw, 520px); /* responsive */
+  height: auto;                    /* keeps landscape */
+  object-fit: contain;             /* no cropping */
+
   border-radius: 20px;
   border: 3px solid #60a5fa;
   box-shadow:
     0 0 30px rgba(96,165,250,0.4),
     0 0 60px rgba(96,165,250,0.2);
+
   animation: float 4s ease-in-out infinite;
 }
+
 
 /* Glow background */
 .hero-image::before {
   content: "";
   position: absolute;
   width: 300px;
-  aspect-ratio: 9 / 16;
   background: rgba(96,165,250,0.15);
   filter: blur(35px);
   border-radius: 24px;
@@ -155,6 +157,206 @@ body {
       color: white;
       padding: 20px 0;
   }
+  /* Shared 9:16 vertical frame (Hero / About) */
+.vertical-frame {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+/* Image */
+.vertical-frame img {
+  width: 260px;
+  aspect-ratio: 9 / 16;
+  object-fit: cover;
+  border-radius: 20px;
+  border: 3px solid #60a5fa;
+  box-shadow:
+    0 0 30px rgba(96,165,250,0.4),
+    0 0 60px rgba(96,165,250,0.2);
+  animation: float 4s ease-in-out infinite;
+}
+
+/* Glow background */
+.vertical-frame::before {
+  content: "";
+  position: absolute;
+  width: 300px;
+  aspect-ratio: 9 / 16;
+  background: rgba(96,165,250,0.15);
+  filter: blur(35px);
+  border-radius: 24px;
+  z-index: -1;
+}
+
+/* ABOUT SECTION */
+.about-section {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background: transparent; /* keeps continuous background */
+  padding: 0 8%;
+}
+
+/* CONTENT WRAPPER */
+.about-content {
+  display: grid;
+  grid-template-columns: 1fr 1.3fr;
+  gap: 70px;
+  align-items: center;
+  width: 100%;
+}
+.about-info {
+  margin-left: 150px;
+}
+@media (max-width: 992px) {
+  .about-info {
+    margin-left: 0;
+  }
+}
+
+
+/* LEFT: IMAGE */
+.about-photo {
+  display: flex;
+  justify-content: center;
+}
+
+/* RIGHT: TEXT */
+.about-title {
+  font-size: clamp(2.5rem, 4vw, 3.2rem);
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: #f8fafc;
+}
+
+.about-text {
+  font-size: 1.05rem;
+  line-height: 1.8;
+  color: #c7d2fe;
+  max-width: 620px;
+}
+
+/* CTA */
+.about-cta {
+  margin-top: 25px;
+  font-weight: 600;
+  color: #93c5fd;
+}
+
+/* RESPONSIVE */
+@media (max-width: 992px) {
+  .about-content {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .about-text {
+    margin: 0 auto;
+  }
+}
+
+/* Smooth entrance */
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Skills section layout */
+.skills-full {
+  min-height: 100vh;
+  padding: 60px 5%;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skills-hero {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 70px;
+  max-width: 1200px;
+  margin: auto;
+  justify-items: center;
+}
+
+/* Center bottom row */
+.skill-float:nth-child(4),
+.skill-float:nth-child(5) {
+  grid-column: span 1;
+}
+
+/* Wrap bottom two in middle */
+.skill-float:nth-child(4) {
+  grid-column: 1 / 3;
+  justify-self: end;
+}
+
+.skill-float:nth-child(5) {
+  grid-column: 2 / 4;
+  justify-self: start;
+}
+
+
+@media (max-width: 768px) {
+  .skill-float:nth-child(4),
+  .skill-float:nth-child(5) {
+    grid-column: auto;
+    justify-self: center;
+  }
+}
+
+
+/* Each skill behaves like hero-image */
+.skill-float {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+/* EXACT hero-image img behavior */
+.skill-float img {
+  width: clamp(220px, 22vw, 300px);
+  height: auto;
+  object-fit: contain;
+
+  border-radius: 18px;
+  border: 3px solid #60a5fa;
+  box-shadow:
+    0 0 30px rgba(96,165,250,0.4),
+    0 0 60px rgba(96,165,250,0.2);
+
+  animation: float 4s ease-in-out infinite;
+}
+
+/* Label */
+.skill-float h6 {
+  margin-top: 12px;
+  color: #e5e7eb;
+  font-weight: 600;
+}
+
+/* Skills Title */
+.skills-title {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.skills-title h2 {
+  font-weight: 700;
+  color: #f8fafc;
+}
+
 
 .tool-circle {
   width: 130px;
@@ -203,15 +405,21 @@ body {
   font-weight: 600;
 }
 
-      
-      .navbar {
-        background-color: #020617 !important;
-        font-family: 'Courier New', monospace;
-        letter-spacing: 2px;
-        position: relative;
-        transition: color 0.3s ease;
-      }
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+      background-color: #020617 !important;  backdrop-filter: blur(10px);
+  padding: 15px 0; /* stays same size */
+  transition: background 0.3s ease;
+          font-family: 'Courier New', monospace;
 
+}
+/* Optional: add shadow only */
+.navbar.scrolled {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+}
       .navbar-brand {
         color: #e5e7eb;
       }
@@ -285,6 +493,7 @@ footer {
   color: #94a3b8;
 }
 
+
   </style>
 </head>
 <body>
@@ -331,7 +540,7 @@ footer {
       </div>
       <!-- RIGHT: IMAGE -->
       <div class="hero-image">
-        <img src="images/jeniel.png" alt="Jeniel Sabalboro">
+        <img src="images/coding.gif" alt="Jeniel Sabalboro">
       </div>
 
     </div>
@@ -340,36 +549,68 @@ footer {
 
 
 <!-- About Me -->
-<section id="about" class="section-padding reveal">
-  <div class="container">
-    <h2 class="text-center mb-4">About Me</h2>
-    <p class="text-center">
-        I am a Computer Engineering student at the Asia Technological School of Science and Arts (Asiatech) with a
-        deep interest in automation, system development, Web Development, and sustainable energy technologies. I
-        strive to apply my technical knowledge and analytical skills to create innovative solutions that address real
-        world challenges. I am eager to continuously learn, work with others, and contribute to advancements in
-        engineering research and sustainable development
-    </p>
-  </div>
-</section>
+<section id="about" class="about-section">
+  <div class="about-content">
 
-<!-- Skills -->
-<section id="skills" class="section-padding">
-  <div class="container">
-    <h2 class="text-center mb-4">Technical Skills</h2>
-    <div class="text-center">
-      <span class="badge bg-primary badge-skill">C / C++</span>
-      <span class="badge bg-primary badge-skill">Python</span>
-      <span class="badge bg-primary badge-skill">Arduino</span>
-      <span class="badge bg-primary badge-skill">ESP32</span>
-      <span class="badge bg-primary badge-skill">IoT Systems</span>
-      <span class="badge bg-primary badge-skill">Embedded Systems</span>
-      <span class="badge bg-primary badge-skill">Machine Learning (LSTM)</span>
-      <span class="badge bg-primary badge-skill">Data Analysis</span>
-      <span class="badge bg-primary badge-skill">Web Development</span>
+    <div class="about-info">
+      <h1 class="about-title">About Me</h1>
+
+      <p class="about-text">
+        I am a Computer Engineering student at the Asia Technological School of Science and Arts (Asiatech) with a
+        deep interest in automation, system development, web development, and sustainable energy technologies.
+        I strive to apply my technical knowledge to build practical, real-world systems and continuously improve
+        through hands-on projects and collaboration.
+      </p>
+
+      <p class="about-cta">
+        Open to internships, research, and engineering opportunities.
+      </p>
+    </div>
+
+    <div class="about-photo vertical-frame">
+      <img src="images/jeniel.png" alt="Jeniel Sabalboro">
     </div>
   </div>
 </section>
+
+<section id="skills" class="skills-full">
+
+  <!-- TITLE (ALWAYS CENTERED AT TOP) -->
+  <div class="skills-title">
+    <h2>Technical Skills</h2>
+  </div>
+
+  <!-- FLOATING SKILLS -->
+  <div class="skills-hero">
+
+    <div class="skill-float">
+      <img src="images/webdev.png" alt="Web Development">
+      <h6>Web Development</h6>
+    </div>
+
+    <div class="skill-float">
+      <img src="images/iot.png" alt="IoT Systems">
+      <h6>IoT Systems</h6>
+    </div>
+
+    <div class="skill-float">
+      <img src="images/ece.png" alt="Electrical Knowledge">
+      <h6>Basic Electrical Knowledge</h6>
+    </div>
+
+    <div class="skill-float">
+      <img src="images/embedded.png" alt="Embedded System">
+      <h6>Embedded System</h6>
+    </div>
+
+    <div class="skill-float">
+      <img src="images/cad.png" alt="AutoCAD">
+      <h6>AutoCAD 2D/3D</h6>
+    </div>
+
+  </div>
+</section>
+
 
 <!-- Projects -->
 <section id="tools" class="section-paddin text-white">
@@ -392,7 +633,7 @@ footer {
       <div class="col-md-6">
         <div class="card h-100 shadow">
           <div class="card-body">
-            <h5 class="card-title">AI Firefighting Drone (D-ROAR)</h5>
+            <h5 class="card-title"> </h5>
             <p class="card-text">
               Autonomous drone using thermal imaging and AI to detect and extinguish fires in hard-to-reach areas.
             </p>
@@ -630,6 +871,15 @@ function animate() {
   requestAnimationFrame(animate);
 }
 animate();
+const navbar = document.querySelector(".navbar");
+
+window.addEventListener("scroll", () => {
+  if (window.scrollY > 10) {
+    navbar.classList.add("scrolled");
+  } else {
+    navbar.classList.remove("scrolled");
+  }
+});
 
 </script>
 
