--- a/portfolio.html
+++ b/portfolio.html
@@ -530,10 +530,10 @@ footer {
 
 
         <div class="hero-buttons">
-      <a href="resume.pdf" class="btn btn-light btn-lg me-2" target="_blank">
+      <a href="pdf/Resume_Sabalboro.pdf" class="btn btn-light btn-lg me-2" target="_blank">
             <i class="fas fa-file-alt"></i> View Resume
           </a>
-      <a href="Application Letter.pdf" class="btn outline" target="_blank">
+      <a href="pdf/Application Letter.pdf" class="btn outline" target="_blank">
             <i class="fas fa-envelope"></i> Application Letter
           </a>
         </div>
